:sparkles: 초대장 상세 적용

--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
-  "type": "wedding",
-  "title": "초대합니다",
-  "names": "김하늘 & 박민준",
-  "datetime": "2025-10-18 13:00",
-  "venue": "서울 ○○호텔 그랜드홀",
+  "title": "최연아의 첫 번째 생일잔치",
+  "names": "최동현 & 박혜민",
+  "date": "2025년 09월 20일 토요일",
+  "datetime": "AM 11시 30분",
+  "venue1": "경기도 군포시 고산로 599",
+  "venue2": "플로렌스 군포산본점 루즈벨트홀",
   "map": "https://maps.google.com?q=서울",
   "note": "드레스코드: 세미 포멀"
 }
