--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      NODE_ENV: production  
+    # env:
+    #   NODE_ENV: production  
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -19,7 +19,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
-      - run: npm run export
+      # - run: npm run export
       - run: cp out/index.html out/404.html  # 404 대비(리눅스 셸)
       - uses: actions/upload-pages-artifact@v3
         with:
