--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # env:
-    #   NODE_ENV: production  
+    env:
+      NODE_ENV: production  
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
