:rocket: 환경 변수 적용 방식 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,15 +9,14 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      NODE_ENV: production  
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
-      - run: npm ci
+      - run: npm ci --include=dev
+      - run: echo "NEXT_PUBLIC_BASE_PATH=/k-invitation" >> .env.production
       - run: npm run build
       # - run: npm run export
       - run: cp out/index.html out/404.html  # 404 대비(리눅스 셸)
